# Obfussor

./: .envrc.example  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE  README.md  angular.json  book.toml  bunfig.toml  eslint.config.js  flake.nix  obfucc  obfucc.bat  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt-nightly.toml  test_build.ps1  tsconfig.app.json  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: android-build.yml  auto-release.yml  ci.yml  gh-pages.yml  mdbook.yml  release-macos-signed.yml  test-build-only.yml  tests.yml
android/: BUILD_TESTS.md  README.md  SIGNING.md  app.gradle  build.gradle  proguard-rules.pro
android/app/: build.gradle
build-win/: CMakeCache.txt  cmake_install.cmake
docs/: introduction.md  testing.md
docs/src/: SUMMARY.md  building.md  contributing.md  installation.md  introduction.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/llvm/: ir-basics.md  (+3 more)
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/app/: app.component.css  app.component.ts  app.config.ts  app.routes.ts
src/lib/: Editor.svelte
src/routes/: +page.svelte
tests/: normalize_obfucc.ps1  run_regressions.ps1  run_regressions.sh  run_smoke.ps1  run_smoke.sh  runner.py
tests/cases/: control_flow_flatten.check  control_flow_flatten.ll  string_encrypt.check  string_encrypt.ll
tests/test_obfucc/: CMakeLists.txt  obfucc_stub.c
tools/: obfucc_stub.py
(+25 files in other folders)
